--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3",
+    "oracledb": "^6.9.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
@@ -27,7 +27,6 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
-    "@types/pg": "^8.15.5",
     "@types/uuid": "^10.0.0",
     "concurrently": "^9.2.0",
     "nodemon": "^3.1.10",
