Updated server architecture

--- a/server/.env
+++ b/server/.env
@@ -4,14 +4,15 @@ DB_PASSWORD=your_db_password
 DB_CONNECT_STRING=your_oracle_connection_string
 
 # JWT Configuration
-JWT_SECRET=your_super_secure_jwt_secret_key_here
+JWT_SECRET=your_super_secure_jwt_secret_key_here_make_it_very_long_and_random
 
 # Server Configuration
 PORT=3000
 NODE_ENV=development
 CLIENT_URL=http://localhost:8000
 
-# Example Oracle connection string format:
-# DB_CONNECT_STRING=your_host:1521/your_service_name
-# For Autonomous Database, it will be something like:
-# DB_CONNECT_STRING=(description=(retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.region.oraclecloud.com))(connect_data=(service_name=your_service_name))(security=(ssl_server_cert_dn="CN=adwc.eucom-central-1.oraclecloud.com, OU=Oracle BMCS FRANKFURT, O=Oracle Corporation, L=Redwood City, ST=California, C=US")))
+# Example Oracle Autonomous Database connection string:
+# DB_CONNECT_STRING=(description=(retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.us-ashburn-1.oraclecloud.com))(connect_data=(service_name=your_service_name_high.adb.oraclecloud.com))(security=(ssl_server_cert_dn="CN=adb.us-ashburn-1.oraclecloud.com, OU=Oracle BMCS US EAST, O=Oracle Corporation, L=Redwood City, ST=California, C=US")))
+
+# For local Oracle XE:
+# DB_CONNECT_STRING=localhost:1521/XEPDB1
