--- a/server/package.json
+++ b/server/package.json
@@ -7,28 +7,32 @@
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test": "echo \"No tests yet\" && exit 0"
   },
+  "keywords": ["game", "multiplayer", "maze", "websockets"],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
+    "helmet": "^7.1.0",
     "compression": "^1.7.4",
-    "oracledb": "^6.0.3",
+    "oracledb": "^6.2.0",
     "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5.1.6",
-    "@types/node": "^20.4.5",
-    "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/uuid": "^9.0.2",
+    "typescript": "^5.2.2",
+    "@types/node": "^20.8.6",
+    "@types/express": "^4.17.20",
+    "@types/cors": "^2.8.15",
+    "@types/bcryptjs": "^2.4.5",
+    "@types/jsonwebtoken": "^9.0.4",
+    "@types/uuid": "^9.0.6",
     "ts-node": "^10.9.1",
     "nodemon": "^3.0.1"
   }
