--- a/server/.env
+++ b/server/.env
@@ -1,18 +1,11 @@
-# Database Configuration
-DB_USER=your_db_username
-DB_PASSWORD=your_db_password
-DB_CONNECT_STRING=your_oracle_connection_string
+DB_USER=ADMIN
+DB_PASSWORD=dyfZav-bavjy2-bukgok
+DB_CONNECT_STRING=(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.us-phoenix-1.oraclecloud.com))(connect_data=(service_name=g4e958df0a8f776_mazegamedb_low.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))
 
-# JWT Configuration
-JWT_SECRET=your_super_secure_jwt_secret_key_here_make_it_very_long_and_random
+# JWT Configuration  
+JWT_SECRET=your_super_secure_jwt_secret_key_12345
 
 # Server Configuration
 PORT=3000
-NODE_ENV=development
-CLIENT_URL=http://localhost:8000
-
-# Example Oracle Autonomous Database connection string:
-# DB_CONNECT_STRING=(description=(retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.us-ashburn-1.oraclecloud.com))(connect_data=(service_name=your_service_name_high.adb.oraclecloud.com))(security=(ssl_server_cert_dn="CN=adb.us-ashburn-1.oraclecloud.com, OU=Oracle BMCS US EAST, O=Oracle Corporation, L=Redwood City, ST=California, C=US")))
-
-# For local Oracle XE:
-# DB_CONNECT_STRING=localhost:1521/XEPDB1
+NODE_ENV=production
+CLIENT_URL=http://your-public-ip:3000
